--- a/CSS/home.css
+++ b/CSS/home.css
@@ -14,30 +14,6 @@ body {
     background-color: gray;
 }
 
-.important {
-    color: #fff;
-    position: absolute !important;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-#video {
-    position: fixed;
-    min-width: 100%;
-    min-height: 100%;
-    -webkit-filter: blur(5px);
-    -moz-filter: blur(5px);
-    -o-filter: blur(5px);
-    -ms-filter: blur(5px);
-    filter: blur(5px);
-}
-
-.audio {
-    position: absolute;
-    z-index: -9999;
-}
-
 .glow-on-hover {
     width: 180px;
     height: 30px;
@@ -153,6 +129,34 @@ body {
         transform: scale(15);
         opacity: 0.01;
     }
+}
+
+.important {
+    color: #fff;
+    position: absolute !important;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#video {
+    position: fixed;
+    min-width: 100%;
+    min-height: 100%;
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+}
+
+.audio {
+    position: absolute;
+    z-index: -9999;
+}
+
+#count {
+    color: #ffffff;
 }
 
 #normal {
